syntax = "proto3";

import "primitives/heartbeat.proto";
import "primitives/transactions.proto";
import "primitives/gossip-listener.proto";

service Consensus {
  rpc GetHeartbeat (GetHeartbeatInput) returns (GetHeartbeatOutput);
  rpc SendTransaction (SendTransactionInput) returns (SendTransactionOutput);
  rpc GossipMessageReceived (GossipListenerInput) returns (GossipListenerOutput);
}

message SendTransactionInput {
  Transaction transaction = 1;
  TransactionAppendix transactionAppendix = 2;
}

message SendTransactionOutput {
  // empty
}
